--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,7 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+    namespace "com.example.beacon_broadcast"
 }
 
 dependencies {
