--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="pl.pszklarska.beacon_broadcast">
-</manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
